--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </div>
 
     <div class="cont cf">
-        <main #up class="card ">
+        <main class="card">
 
             <div class="imgcard">
                 <img src="/images/bg-pattern-card.svg" alt="pattern-card">
             </div>
 
-            <div class="user  ">
+            <div class="user">
 
                 <div class="photo">
                     <img src="/images/image-victor.jpg" alt="User_Victor_Crest">
@@ -43,22 +43,24 @@
 
                 <div class="stats">
 
-                    <lu class="oreder">
+                    <div class="oreder">
 
-                        <li>
+
+                        <div>
                             <h2>80k</h2>
                             <p>Followers</p>
-                        </li>
-                        <li>
+                        </div>
+                        <div>
                             <h2>803k</h2>
-                            <p>Likes</p>
-                        </li>
-                        <li>
+                            <p>likes</p>
+                        </div>
+                        <div>
                             <h2>1.4K</h2>
                             <p>Photos</p>
-                        </li>
+                        </div>
 
-                    </lu>
+
+                    </div>
 
                 </div>
             </div>
